--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,4 +40,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
